#Feature Updated based on merge comments; changed const elements in javascript to be called on function call, deleted an old html document, updated a controller test, and separated a cypress test then statement into two